# german-app-quick

./: .env.sample  .gitignore  AGENTS.md  README.md  eslint.config.mjs  jest.config.mjs  jest.setup.ts  next.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  playwright.prod.config.ts  tsconfig.json
.github/workflows/: release.yml
e2e/: flow.spec.ts  prod.spec.ts
e2e/fixtures/: sample.txt
electron/: main.js
lang-detection/: Cargo.toml  LICENSE_MIT
lang-detection/src/: lib.rs
migrations/: 0001_init.sql  0002_unique_anki_front.sql  0003_anki_unknown_words_table.sql  0004_anki_exported_flag.sql  0004_drop_unknown_words_table.sql
scripts/: copy-standalone-assets.mjs  pack-tauri-resources.cjs  playwright.global-setup.ts  tauri-dev.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/stub-dist/: index.html
src/app/: layout.tsx  loading.tsx  page.tsx
src/app/api/anki-cards/: route.ts
src/app/export/: page.tsx
src/app/mine/: page.tsx
src/components/: AnkiBackCell.tsx  AnkiExportTable.tsx  Buttons.tsx  CssReadyGate.tsx  ExportButton.tsx  FileUploader.tsx  SentenceListItem.tsx
src/components/__tests__/: FileUploader.test.tsx
src/utils/: ankiActions.ts  db.ts  events.ts  fileReader.ts  miningDao.ts  text.ts
src/utils/jobs/: translation-job.ts  traqnslation-job.ts
