[package]
name = "german-app"
version = "0.1.0"
description = "German App Tauri"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
	"Win32_Foundation",
	"Win32_System_Threading"
] }

[profile.release]
opt-level = "s"
