[package]
name = "german-app"
version = "0.1.0"
description = "German App (Next.js inside Tauri)"
authors = ["You <you@example.com>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open", "global-shortcut", "devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
